k8s/dev/urlshortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener
spec:
  selector:
    app: urlshortener
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
