k8s/dev/urlshortener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: urlshortener.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: urlshortener
                port:
                  number: 8080
